--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,21 +12,21 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@vueuse/core": "^13.3.0",
-    "axios": "^1.9.0",
+    "axios": "^1.6.7",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
-    "pinia": "^3.0.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vite": "^5.1.0",
+    "@vitejs/plugin-vue": "^5.0.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
-    "tailwindcss": "^3.4.1",
-    "vite": "^6.3.5"
+    "tailwindcss": "^3.4.1"
   }
 }
