--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,8 +21,16 @@ FROM nginx:alpine
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy nginx config if you have custom config
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Add nginx configuration
+RUN echo 'server { \
+    listen 80; \
+    server_name _; \
+    root /usr/share/nginx/html; \
+    index index.html; \
+    location / { \
+        try_files $uri $uri/ /index.html; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
