--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,37 @@
+# Ignore node_modules and .env in both backend and frontend
+backend/node_modules/
+backend/.env
+frontend/node_modules/
+frontend/.env
+
+# General ignores
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.log
+logs/
+dist/
+build/
+node_modules
 # Dependencies
-node_modules/
 .pnp
 .pnp.js
 
 # Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
 # Build outputs
-dist/
-build/
 out/
 
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # IDE
-.idea/
-.vscode/
 *.swp
 *.swo
-
-# OS
-.DS_Store
-Thumbs.db
