--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { 
+      "source": "/api/:path*",
+      "destination": "https://evolt-management-cbj1.vercel.app/api/:path*"
+    },
+    { 
+      "source": "/(.*)", 
+      "destination": "/" 
+    }
   ]
 } 
