--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "swagger-ui-dist": "^5.9.0"
   },
   "devDependencies": {
     "jest": "^29.6.4",
